# paper-writing-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_PHILOSOPHY.md  README.ja.md  README.zh.md
docs/requirements/: 0001-public-release-requirements.md
docs/slides/: README.md  design-philosophy.pptx
examples/: README.md  after_clean.md  before_slop.md
examples/bibliography/: README.md  refs.bib
examples/latex/: abstract.tex  introduction.tex
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: citation.md  provenance.md  reviewer.md  writer.md
plugin/commands/: pwa-check.md  pwa-cite.md  pwa-draft.md  pwa-lint.md  pwa-review.md
plugin/knowledge/: AGENT_SYSTEM_PROMPT.md  DEFINITIONS.template.md  OPERATING_PRINCIPLES.md  PROJECT_PROFILE.template.md  SECTION_STATUS.template.md  STYLE_GUIDE.md  citation_policy.template.md  paper_outline.template.md  provenance_map.template.md
plugin/skills/bib-context/: SKILL.md
plugin/skills/definitions-check/: SKILL.md
plugin/skills/humanizer/: SKILL.md
plugin/skills/lit-search/: SKILL.md
plugin/skills/peer-review/: SKILL.md
plugin/skills/section-status/: SKILL.md
src/paper_writing_agent/: __init__.py  cli.py  scaffold.py
src/paper_writing_agent/bibindex/: __init__.py  grounding.py  index.py  parser.py  schema.json  topics.py  validate.py
src/paper_writing_agent/config/: __init__.py  model.py  presets.py  toml_io.py  wizard.py
src/paper_writing_agent/definitions/: __init__.py  linter.py
src/paper_writing_agent/sections/: __init__.py  tracker.py
src/paper_writing_agent/slop/: __init__.py  linter.py  masking.py  report.py  rules.py
src/paper_writing_agent/stats/: __init__.py  linter.py
src/paper_writing_agent/templates/workspace/: DEFINITIONS.md  PROJECT_PROFILE.md  README.md  citation_policy.md  paper_outline.md  provenance_map.md  section_status.yaml
src/paper_writing_agent/templates/workspace/bib/: README.md
src/paper_writing_agent/templates/workspace/stats/: README.md
tests/: test_bibindex.py  test_cli.py  test_config.py  test_definitions.py  test_masking.py  test_report.py  test_resources.py  test_scaffold.py  test_sections.py  test_slop.py  test_stats.py  test_toml_io.py
