[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "paper-writing-agent"
version = "0.1.0"
description = "An evidence-grounded, anti-AI-slop manuscript-writing agent for computer-science and software-engineering papers, engineered to maximize acceptance at high-impact venues."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "paper-writing-agent contributors" }]
keywords = [
  "academic-writing",
  "scientific-writing",
  "latex",
  "linter",
  "ai-detection",
  "bibliography",
  "reproducibility",
  "claude-code",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/OWNER/paper-writing-agent"
Documentation = "https://github.com/OWNER/paper-writing-agent/tree/main/docs"
Issues = "https://github.com/OWNER/paper-writing-agent/issues"

[project.scripts]
paper-writing-agent = "paper_writing_agent.cli:app"
pwa = "paper_writing_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_writing_agent"]

[tool.hatch.build.targets.sdist]
include = ["src", "plugin", "templates", "examples", "docs", "tests", "README.md", "LICENSE", "NOTICE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
